@@ -10,7 +10,6 @@
 #endif
 
 #include <stdio.h>
-#include <string.h>
 #include <errno.h>
 #include "wv.h"
 
